// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When report and report definition are empty 1`] = `
<div>
  <div
    className="row p-3"
  >
    <div
      className="col-md-4"
    >
      <label
        style={
          Object {
            "lineHeight": "36px",
          }
        }
      >
        Chart type
      </label>
    </div>
    <div
      className="col-md-8"
    >
      <select
        className="form-control"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <canvas />
  <pre
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`When report and report definition are given 1`] = `
<NetworkAnalysisOutput
  isTesting={true}
  loadReport={[Function]}
  planId={100}
  report={
    Array [
      Object {
        "capex": 25373.196882982724,
        "coverage": 193,
        "index": 1,
        "irr": 0.6926999999999963,
        "npv": 299981.76532897586,
      },
      Object {
        "capex": 28469.416882982725,
        "coverage": 215,
        "index": 2,
        "irr": 0.6891999999999996,
        "npv": 333972.6394671266,
      },
      Object {
        "capex": 221904.55623732723,
        "coverage": 1647,
        "index": 3,
        "irr": 0.6023000000000015,
        "npv": 2102823.3532786667,
      },
      Object {
        "capex": 482498.3552715056,
        "coverage": 3580,
        "index": 4,
        "irr": 0.5882000000000004,
        "npv": 4402880.713705363,
      },
      Object {
        "capex": 1573704.1506588343,
        "coverage": 11262,
        "index": 5,
        "irr": 0.5504000000000019,
        "npv": 12906500.787648655,
      },
      Object {
        "capex": 1950232.128700931,
        "coverage": 13812,
        "index": 6,
        "irr": 0.5437000000000013,
        "npv": 15683535.295389896,
      },
      Object {
        "capex": 2158455.9218533617,
        "coverage": 15168,
        "index": 7,
        "irr": 0.5395000000000001,
        "npv": 17140295.621583264,
      },
      Object {
        "capex": 2178230.5915344288,
        "coverage": 15294,
        "index": 8,
        "irr": 0.5390000000000001,
        "npv": 17273926.85564108,
      },
    ]
  }
  reportDefinition={
    Object {
      "uiDefinition": Array [
        Object {
          "chartDefinition": Object {
            "data": Object {
              "datasets": Array [
                Object {
                  "backgroundColor": "rgb(121, 127, 121)",
                  "data": Array [
                    Object {
                      "x": 25373.196882982724,
                      "y": 69.26999999999963,
                    },
                    Object {
                      "x": 28469.416882982725,
                      "y": 68.91999999999996,
                    },
                    Object {
                      "x": 221904.55623732723,
                      "y": 60.23000000000015,
                    },
                    Object {
                      "x": 482498.3552715056,
                      "y": 58.820000000000036,
                    },
                    Object {
                      "x": 1573704.1506588343,
                      "y": 55.04000000000019,
                    },
                    Object {
                      "x": 1950232.128700931,
                      "y": 54.37000000000013,
                    },
                    Object {
                      "x": 2158455.9218533617,
                      "y": 53.95000000000001,
                    },
                    Object {
                      "x": 2178230.5915344288,
                      "y": 53.90000000000001,
                    },
                  ],
                  "fill": false,
                  "label": "IRR",
                  "propertyName": "irr",
                },
              ],
            },
            "displayName": "IRR",
            "name": "irr",
            "options": Object {
              "elements": Object {
                "line": Object {
                  "fill": false,
                  "tension": 0,
                },
              },
              "legend": Object {
                "display": false,
              },
              "responsive": true,
              "scales": Object {
                "xAxes": Array [
                  Object {
                    "display": true,
                    "labelString": "CAPEX",
                    "ticks": Object {
                      "userCallback": [Function],
                    },
                  },
                ],
                "yAxes": Array [
                  Object {
                    "display": true,
                    "ticks": Object {
                      "beginAtZero": false,
                      "callback": [Function],
                    },
                  },
                ],
              },
              "showLines": true,
              "title": Object {
                "display": false,
              },
              "tooltips": Object {
                "callbacks": Object {
                  "label": [Function],
                },
              },
            },
            "type": "scatter",
          },
          "dataModifiers": Object {
            "capex": Object {
              "tickFormat": Object {
                "suffix": "$",
              },
            },
            "irr": Object {
              "tickFormat": Object {
                "multiplier": 100,
                "prefix": "",
                "suffix": "%",
              },
            },
            "labelProperty": "capex",
            "sortBy": "index",
            "sortOrder": "ascending",
          },
        },
      ],
    }
  }
  reportMetaData={
    Object {
      "id": 10,
    }
  }
>
  <div>
    <div
      className="row p-3"
    >
      <div
        className="col-md-4"
      >
        <label
          style={
            Object {
              "lineHeight": "36px",
            }
          }
        >
          Chart type
        </label>
      </div>
      <div
        className="col-md-8"
      >
        <select
          className="form-control"
          onChange={[Function]}
          value=""
        >
          <option
            key="irr"
            value="irr"
          >
            IRR
          </option>
        </select>
      </div>
    </div>
    <canvas />
    <a
      className="btn btn-sm btn-light float-right"
      download={true}
      href="/service-download-file/NetworkAnalysis.csv/v2/report-extended/10/100.csv"
      id="lnkDownloadNetworkAnalysisOutputReport"
    >
      <i
        className="fa fa-download"
      />
       Download Report
    </a>
    <pre
      style={
        Object {
          "display": "none",
        }
      }
    >
      {
  "name": "irr",
  "displayName": "IRR",
  "type": "scatter",
  "data": {
    "datasets": [
      {
        "label": "IRR",
        "backgroundColor": "rgb(121, 127, 121)",
        "data": [
          {
            "x": 25373.196882982724,
            "y": 69.26999999999963
          },
          {
            "x": 28469.416882982725,
            "y": 68.91999999999996
          },
          {
            "x": 221904.55623732723,
            "y": 60.23000000000015
          },
          {
            "x": 482498.3552715056,
            "y": 58.820000000000036
          },
          {
            "x": 1573704.1506588343,
            "y": 55.04000000000019
          },
          {
            "x": 1950232.128700931,
            "y": 54.37000000000013
          },
          {
            "x": 2158455.9218533617,
            "y": 53.95000000000001
          },
          {
            "x": 2178230.5915344288,
            "y": 53.90000000000001
          }
        ],
        "fill": false,
        "propertyName": "irr"
      }
    ]
  },
  "options": {
    "legend": {
      "display": false
    },
    "elements": {
      "line": {
        "fill": false,
        "tension": 0
      }
    },
    "showLines": true,
    "responsive": true,
    "title": {
      "display": false
    },
    "scales": {
      "xAxes": [
        {
          "display": true,
          "labelString": "CAPEX",
          "ticks": {}
        }
      ],
      "yAxes": [
        {
          "display": true,
          "ticks": {
            "beginAtZero": false
          }
        }
      ]
    },
    "tooltips": {
      "callbacks": {}
    }
  }
}
    </pre>
  </div>
</NetworkAnalysisOutput>
`;

exports[`When report definition is empty 1`] = `
<div>
  <div
    className="row p-3"
  >
    <div
      className="col-md-4"
    >
      <label
        style={
          Object {
            "lineHeight": "36px",
          }
        }
      >
        Chart type
      </label>
    </div>
    <div
      className="col-md-8"
    >
      <select
        className="form-control"
        onChange={[Function]}
        value=""
      />
    </div>
  </div>
  <canvas />
  <a
    className="btn btn-sm btn-light float-right"
    download={true}
    href="/service-download-file/NetworkAnalysis.csv/v2/report-extended/10/100.csv"
    id="lnkDownloadNetworkAnalysisOutputReport"
  >
    <i
      className="fa fa-download"
    />
     Download Report
  </a>
  <pre
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;

exports[`When report is empty 1`] = `
<div>
  <div
    className="row p-3"
  >
    <div
      className="col-md-4"
    >
      <label
        style={
          Object {
            "lineHeight": "36px",
          }
        }
      >
        Chart type
      </label>
    </div>
    <div
      className="col-md-8"
    >
      <select
        className="form-control"
        onChange={[Function]}
        value=""
      >
        <option
          key="irr"
          value="irr"
        >
          IRR
        </option>
      </select>
    </div>
  </div>
  <canvas />
  <pre
    style={
      Object {
        "display": "none",
      }
    }
  />
</div>
`;
